--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon node index.js"
   },
   "type": "module",
   "author": "",
@@ -18,5 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
     "passport-openidconnect": "^0.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
