--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
-    "passport": "^0.7.0",
-    "passport-openidconnect": "^0.1.2"
+    "openid-client": "^5.6.5",
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
